# rally-clone-game

./: .gitignore  Boost.cmake  CMakeLists.txt  LICENSE.txt  ProjectHome.md  README.md  UnitTest.cmake  project.mk  runbuild
.circleci/: config.yml
Stuff/: Rally-general-sprites-1x.xcf  Rally-general-sprites-2x.xcf  Rally-general-sprites-3x.xcf  Rally-general-sprites.xcf  rally_x_course_map.xcf
cmake/: Boost.cmake
mck/: CMakeLists.txt  Makefile  mck.mk
mck/game/: CMakeLists.txt  GameLibMock.h  GameLibUtils.cpp  GameLibUtils.h  GraphicMock.cpp  GraphicMock.h  KeyboardMock.cpp  KeyboardMock.h  SoundMock.h  TimerMock.h
mck/gamelib/: CGameLibMock.cpp  CGameLibMock.h  CGameLibUtils.cpp  CGameLibUtils.h  CGraphicMock.cpp  CGraphicMock.h  CKeyboardMock.cpp  CKeyboardMock.h  CMakeLists.txt  CSoundMock.cpp  CSoundMock.h  CTimerMock.cpp  CTimerMock.h  GameLibMock.cpp  GameLibMock.h  GameLibUtils.cpp  GameLibUtils.h  GraphicMock.cpp  GraphicMock.h  KeyboardMock.cpp  KeyboardMock.h  Makefile  SoundMock.cpp  SoundMock.h  TimerMock.cpp  TimerMock.h
src/: CGameLib.cpp  CMakeLists.txt  Makefile  main.cpp  src.mk
src/car/: CCar.cpp  CCar.h  CMakeLists.txt  Car.cpp  Car.h  Direction.cpp  Direction.h  ECarDirection.cpp  ECarDirection.h  EDirection.cpp  EDirection.h  EOrientation.cpp  EOrientation.h  Makefile  Orientation.cpp  Orientation.h
src/fuel/: CMakeLists.txt  Fuel.cpp  Fuel.h
src/game/: CController.cpp  CController.h  CMakeLists.txt  Camera.h  Controller.cpp  Controller.h  GameLib.h  Graphic.cpp  Graphic.h  Keyboard.cpp  Keyboard.h  Makefile  Sound.cpp  Sound.h  Timer.h
src/gamelib/: AnimationSequence.h  CGameLib.cpp  CGameLib.h  CMakeLists.txt  Camera.h  GameLib.cpp  (+22 more)
src/rally/: CMakeLists.txt  Character.h  Makefile  Stage.h  main.cpp  rally.cpp
test/: CMakeLists.txt
tools/: CMakeLists.txt  Makefile  tools.mk
tools/mapeditor/: CMakeLists.txt  Makefile  map_editor.cpp
tools/mapeditor/stages/stage_type0/: stage.dat.map
tools/visualizer/: CMakeLists.txt  Makefile  visualizer.cpp
trunk/: Makefile  project.mk
tst/: Makefile  tst.mk
(+220 files in other folders)
